# fastapi_full_auth_api

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.prod.txt
alembic/: env.py
alembic/versions/: 310b0eed3154_fix_non_nullable_verified_at.py  4e542e739f63_new_migration_2.py  985f8626cb53_new_initial.py  acdec78e656a_rename__hashed_password_col.py  b3d28c655aef_user_token_table.py
auth/: confdb.py  confemail.py  configs.py  confsettings.py  db.py
auth/exceptions/: error_exceptions.py
auth/templates/user/: account-request-verification.html
auth/user/: email.py  models.py  routes.py  schemas.py  security.py  services.py
tests/: conftest.py
tests/user/: test_user.py  test_user_login.py  test_user_register.py  test_user_verification.py
