[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Yossef-Dawoad <yossefdawoad15@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
alembic = "^1.12.1"
sqlalchemy = "^2.0.23"
uvicorn = "^0.24.0.post1"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
